# Reflection

./: CMakeLists.txt  main.cpp  main.sh  source.generated.h  source.hpp
include/: compiler.h  member_function.h  member_variable.h  raw_type_descriptor_builder.h  reflect.h  registry.h  trait.h  type_descriptor.h  type_descriptor_builder.h
src/: compiler.cpp  raw_type_descriptor_builder.cpp  reflect.cpp
test/: test_reflect_1.cpp
